# speexdsp

./: .gitignore  CMakeLists.txt  config.h.cmake
include/speex/: speex_resampler.h
libspeexdsp/: resample.c
